fixing homepage categories images object fit and name overflow

--- a/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
+++ b/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
@@ -39,7 +39,7 @@
 
 .homepage-categories-grid a{
     width: 100%;
-    height: 210px;
+    height: 230px;
     display: flex;
     flex-direction: column;
     gap:10px
@@ -47,14 +47,14 @@
 
 .homepage-categories-grid a img{
     width: 100%;
-    height: 80%;
+    height: 70%;
+    object-fit: cover;
 }
 
 .homepage-categories-grid a div{
-    height: 20%;
+    height: 30%;
     text-align: center;
     overflow: hidden;
-    white-space: nowrap;
     text-overflow:ellipsis;
     color: #000;
     font-family: "Poppins-Regular";
